syntax = "proto3";

package wallet;

option go_package = "./;pb";

message Wallet {
  string id = 1;
  int32  balance = 2;
  string userId = 3;
}

message CreateWalletRequest{
  int32  balance = 1;
  string userId = 2;
}

message CreateWalletResponse{
  int32  balance = 1;
  string userId = 2;
}

message GetWalledByIdRequest{
  string id = 1;
}

message GetWalletByIdResponse{
  Wallet wallet = 1;
}

service WalletService{
  rpc CreateWallet (CreateWalletRequest) returns (CreateWalletResponse);
  rpc GetWalletById (GetWalledByIdRequest) returns (GetWalletByIdResponse);
}
